# core-compute_native

./: Cargo.toml  README.md  build.rs
core-compute/: Cargo.toml
core-compute/src/: lib.rs
examples/C_example/: core_compute_native.h  main.c  makefile
examples/bindgen_makefile_example/: makefile
src/: lib.rs
src/core-compute/: README.md
