[package]
name = "core-compute_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_compute_native"
crate-type = ["cdylib"]

[dependencies]
core-compute = {path = "src/core-compute/"}
wgpu = "22"
pollster = "0.2"
bytemuck = { version = "1.16", features = ["derive"] }
flume = "0.11"

[build-dependencies]
cbindgen = "0.27"

